--- a/client/assets/css/estilo.css
+++ b/client/assets/css/estilo.css
@@ -2,7 +2,7 @@
   display: none;
 }
 .card-columns{
-  margin: 1%;
+  margin-top: 1em;
 }
 .card{
   cursor: pointer;
@@ -18,6 +18,38 @@
   justify-content: space-between;
   flex-direction: row-reverse;
 }
-#btn-deletar .svg-deletar:hover path {
-  fill: #FFF;
+#btn-deletar:hover svg path,
+#btn-deletar:hover{
+  fill:#FFF;
+  color:#FFF;
+}
+
+
+#btn-buscar::after{
+  content: ' Pesquisar';
+}
+#btn-adicionar::after{
+  content: ' Nova Tarefa';
+}
+#texto-busca{
+  display: inline-block;
+  width: auto;
+  vertical-align: middle;
+  height: calc(2.25rem + 2px);
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  padding: 0 !important;
+}
+@media (max-width: 576px){
+  #btn-buscar::after{
+    content: '';
+  }
+  #btn-adicionar::after{
+    content: '';
+  }
 }
